<resources>
    <!-- шифруемся от тех, кто может увидеть приложение на телефоне -->
    <string name="app_name">Калькулятор</string>
    <string name="logins">Логины</string>
    <string name="cities">Города</string>
    <string name="options">Настройки</string>
    <string name="create_login">Добавить логин</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="phone">Телефон</string>
    <string name="city">Город</string>
    <string name="from_checked">Город ИЗ</string>
    <string name="to_checked">Город В</string>
    <string name="preference_file_key">com.abelkin.PREFERENCE_FILE_KEY</string>
    <string name="lower_bound">com.abelkin.LOWER_BOUND</string>
    <string name="upper_bound">com.abelkin.UPPER_BOUND</string>
    <string name="period">com.abelkin.PERIOD</string>
    <string name="new_orders">com.abelkin.GET_NEW_ORDERS</string>
    <string name="free_orders">com.abelkin.GET_FREE_ORDERS</string>
    <string name="lat_pref">com.abelkin.LAT_PREF</string>
    <string name="long_pref">com.abelkin.LONG_PREF</string>
    <string name="period_s">Периодичность (с)</string>
    <string name="end_interval">Конец интервала (ч)</string>
    <string name="begin_interval">Начало интервала (ч)</string>
    <string name="save">Сохранить</string>
    <string name="delete_unused">Удалить неиспользуемые</string>
    <string name="get_new_orders">Текущие заказы</string>
    <string name="get_free_orders">Свободные заказы</string>
    <string name="get_gps">Получить GPS</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>

</resources>
