<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

    <EditText
        android:id="@+id/login_input_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/login"
        android:maxLines="1">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_input_form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_input_form_login"
        android:hint="@string/password"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/login_input_form_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_input_form_password"
        android:hint="@string/phone"
        android:maxLines="1"/>

</RelativeLayout>