<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.abelkin.mostcatcher.activities.OptionsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="60dp" >

            <TextView android:id="@+id/activity_time_from_text"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:padding="10dp"
                      android:textSize="16sp"
                      android:text="@string/begin_interval"/>
            <EditText
                android:id="@+id/activity_time_from"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >

            <TextView android:id="@+id/activity_time_to_text"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:padding="10dp"
                      android:textSize="16sp"
                      android:text="@string/end_interval"/>
            <EditText
                android:id="@+id/activity_time_to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >

            <TextView android:id="@+id/activity_time_period_text"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:padding="10dp"
                      android:textSize="16sp"
                      android:text="@string/period_s"/>
            <EditText
                android:id="@+id/activity_time_period"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <CheckBox
                    android:id="@+id/activity_time_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_new_orders"/>
            <CheckBox
                    android:id="@+id/activity_time_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_free_orders"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <Button
                android:text="@string/get_gps"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_gps"
                android:onClick="getGPS"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView android:id="@+id/activity_time_lat_text"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:padding="10dp"
                      android:textSize="16sp"
                      android:text="@string/latitude"/>
            <EditText
                    android:id="@+id/activity_time_lat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
            <TextView android:id="@+id/activity_time_long_text"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:padding="10dp"
                      android:textSize="16sp"
                      android:text="@string/longitude"/>
            <EditText
                    android:id="@+id/activity_time_long"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:text="@string/save"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="savePreferences"/>

    </LinearLayout>

</RelativeLayout>
